- PHP Post santizing and validation implmented - If there are input errors that make it past browser PHP adds appropriate error next to field - Session data is no longer lost on form error - HTML error spans added next to all input fields initial visibility hidden - Fixed bug where not all tickets were being displayed in invoice - Added page code to invoice debug area

--- a/a3/css/invoicestyle.css
+++ b/a3/css/invoicestyle.css
@@ -63,12 +63,13 @@
    
 
 .debug {
-    border-style: dashed;
+    border-style: solid;
     border-width: 2px;
     margin-top: 5px;
     margin-left: 50px;
     margin-right: 50px;
-    height: 400px;
+    padding: 10px;
+    height: auto;
     background-color: azure;
     font-size: 18px;
 }
